--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
       <div class="section-center hero-center">
         <article class="hero-info">
           <div class="underline"></div>
-          <h2 style="color: indigo;">i'm Boniface Mwangi</h2>
-          <h4>Software Developer & Content Creator</h4>
+          <h2 style="color: indigo;">I'm Boniface Mwangi</h2>
+          <h4>Software Developer </ Programmer with good Habits>
           <a href="contact.html" class="btn hero-btn">Hire me</a>
-           <a href="contact.html" class="btn hero-btn">&#128073;&#127999;Resume</a>
+           <a href="https://www.linkedin.com/in/boniface-mwangi-398154188/" class="btn hero-btn">&#128073;&#127999;Resume</a>
           <!-- social icons -->
           <ul class="social-icons hero-icons">
             <li>
