html,css,javascript website

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <article class="hero-info">
           <div class="underline"></div>
           <h2 style="color: indigo;">I'm Boniface Mwangi</h2>
-          <h4>Software Developer & Tech Enthusiast 
+          <h4>Software Developer & Tech Enthusiast <br>
           <a href="contact.html" class="btn hero-btn">Hire me</a>
            <a href="https://www.linkedin.com/in/boniface-mwangi-398154188/" class="btn hero-btn">&#128073;&#127999;Resume</a>
           <!-- social icons -->
